Added support for MapJoins, functions, In and Is(Not)Empty to PredicateSpecificationEvaluator